force-app/main/default/objects/ErrorLog__c/fields/LogDetails__c.field-meta.xml
<CustomField>
    <fullName>LogDetails__c</fullName>
    <label>Log Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>