force-app/main/default/objects/ErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApexClass__c</columns>
    <columns>ProcessName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LogDateTime__c</columns>
    <columns>LogDetails__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>